force-app/main/default/objects/Employee__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>