force-app/main/default/objects/Employee__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>