force-app/main/default/objects/Employee__c/fields/Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Manager_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Phone</label>
    <type>Phone</type>
</CustomField>