force-app/main/default/objects/Employee__c/fields/Name_ENG__c.field-meta.xml
<CustomField>
    <fullName>Name_ENG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name (ENG)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>