force-app/main/default/objects/Employee__c/fields/Name_TH__c.field-meta.xml
<CustomField>
    <fullName>Name_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name (TH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>